--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,20 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "20"
+          cache: npm
+          cache-dependency-path: workfolio/package-lock.json
 
       - name: Install deps (workfolio)
         working-directory: workfolio
-        run: npm ci
+        env:
+          CI: true
+          NPM_CONFIG_FUND: false
+          NPM_CONFIG_AUDIT: false
+        run: |
+          echo "Node: $(node -v)"
+          echo "NPM:  $(npm -v)"
+          npm ci --no-audit --no-fund || npm install --no-audit --no-fund
 
       - name: Type check & lint (workfolio)
         working-directory: workfolio
@@ -30,7 +39,7 @@ jobs:
 
       - name: Build Docker images
         run: |
-          docker build -t workfolio:ci ./workfolio
+          docker build --build-arg VITE_TURNSTILE_SITE_KEY=${{ secrets.VITE_TURNSTILE_SITE_KEY }} -t workfolio:ci ./workfolio
           docker build -t ai-backend:ci ./services/ai-backend
 
   docker-scan:
