--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,9 @@ jobs:
         with:
           node-version: "20"
           cache: npm
-          cache-dependency-path: workfolio/package-lock.json
+          cache-dependency-path: |
+            workfolio/package-lock.json
+            services/ai-backend/package-lock.json
 
       - name: Install deps (workfolio)
         working-directory: workfolio
