--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,20 +15,28 @@ jobs:
 
       # Skipping direct npm installs to avoid path/caching issues; Docker builds validate builds
 
-      - name: Build Docker images (workfolio)
-        run: |
-          docker build \
-            -f workfolio/Dockerfile \
-            --build-arg VITE_TURNSTILE_SITE_KEY=${{ secrets.VITE_TURNSTILE_SITE_KEY }} \
-            -t workfolio:ci \
-            workfolio
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker images (ai-backend)
-        run: |
-          docker build \
-            -f services/ai-backend/Dockerfile \
-            -t ai-backend:ci \
-            services/ai-backend
+      - name: Build workfolio image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./workfolio
+          file: ./workfolio/Dockerfile
+          push: false
+          load: true
+          tags: workfolio:ci
+          build-args: |
+            VITE_TURNSTILE_SITE_KEY=${{ secrets.VITE_TURNSTILE_SITE_KEY }}
+
+      - name: Build ai-backend image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./services/ai-backend
+          file: ./services/ai-backend/Dockerfile
+          push: false
+          load: true
+          tags: ai-backend:ci
 
   docker-scan:
     runs-on: ubuntu-latest
