--- a/.github/workflows/workfolio-ci.yml
+++ b/.github/workflows/workfolio-ci.yml
@@ -36,6 +36,7 @@ jobs:
           git submodule status || true
           ls -la
           ls -la workfolio
+          test -f workfolio/Dockerfile && echo "Found workfolio/Dockerfile" || (echo "Missing workfolio/Dockerfile" && exit 1)
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -52,7 +53,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./workfolio
-          file: ./workfolio/Dockerfile
+          file: Dockerfile
           load: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master' }}
           push: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' }}
           tags: |
