--- a/.github/workflows/workfolio-ci.yml
+++ b/.github/workflows/workfolio-ci.yml
@@ -47,7 +47,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./workfolio
-          file: Dockerfile
           load: true
           push: false
           tags: |
@@ -61,7 +60,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./workfolio
-          file: Dockerfile
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/workfolio:${{ github.sha }}
@@ -117,6 +115,7 @@ jobs:
         run: |
           ls -la services
           ls -la services/ai-backend
+          test -f services/ai-backend/Dockerfile && echo "Found services/ai-backend/Dockerfile" || (echo "Missing services/ai-backend/Dockerfile" && exit 1)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -132,7 +131,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./services/ai-backend
-          file: Dockerfile
           load: true
           push: false
           tags: |
@@ -143,7 +141,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./services/ai-backend
-          file: Dockerfile
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/ai-backend:${{ github.sha }}
@@ -184,6 +181,7 @@ jobs:
         run: |
           ls -la services
           ls -la services/arachne
+          test -f services/arachne/Dockerfile && echo "Found services/arachne/Dockerfile" || (echo "Missing services/arachne/Dockerfile" && exit 1)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -199,7 +197,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./services/arachne
-          file: Dockerfile
           load: true
           push: false
           tags: |
@@ -210,7 +207,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./services/arachne
-          file: Dockerfile
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/arachne:${{ github.sha }}
