--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,7 +80,10 @@ jobs:
           export WORKFOLIO_IMAGE=ghcr.io/\${REPO}/workfolio:\${SHA}
           export AI_BACKEND_IMAGE=ghcr.io/\${REPO}/ai-backend:\${SHA}
           export ARACHNE_IMAGE=ghcr.io/\${REPO}/arachne:\${SHA}
-          docker compose --env-file ../.env -f docker-compose.prod.yml up -d --pull always nginx ai-backend arachne
+          # Cleanup any legacy containers by name (from previous compose files)
+          docker ps -a --format '{{.Names}}' | awk '/portfolio-(workfolio|ai-backend|arachne|nginx|redis)(-prod)?$/ {print $0}' | xargs -r docker rm -f || true
+          # Bring up services with fresh images, remove orphans, and force recreate
+          docker compose --env-file ../.env -f docker-compose.prod.yml up -d --pull always --remove-orphans --force-recreate nginx ai-backend arachne
           EOSSH
 
       - name: Verify production health
