--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,8 +81,10 @@ jobs:
           export AI_BACKEND_IMAGE=ghcr.io/\${REPO}/ai-backend:\${SHA}
           export ARACHNE_IMAGE=ghcr.io/\${REPO}/arachne:\${SHA}
           export ARACHNE_CPU_LIMIT=1.0
+          # Bring down current prod stack (if any) to avoid port/cpu conflicts
+          docker compose --env-file ../.env -f docker-compose.prod.yml down --remove-orphans || true
           # Cleanup any legacy containers by name (from previous compose files)
-          docker ps -a --format '{{.Names}}' | awk '/portfolio-(workfolio|ai-backend|arachne|nginx|redis)(-prod)?$/ {print $0}' | xargs -r docker rm -f || true
+          docker ps -aq --filter name='^portfolio-.*' | xargs -r docker rm -f || true
           # Bring up services with fresh images, remove orphans, and force recreate
           docker compose --env-file ../.env -f docker-compose.prod.yml up -d --pull always --remove-orphans --force-recreate nginx ai-backend arachne
           EOSSH
