--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -60,6 +60,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }    
 
+    # Grafana (served behind /monitoring/grafana/)
+    location /monitoring/grafana/ {
+        proxy_pass http://grafana:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Redis Commander (optional management UI)
     # location /redis/ {
     #     proxy_pass http://redis-commander:8081/;
