--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -21,6 +21,9 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
 
+    # Resolve Docker service names from within the container network
+    resolver 127.0.0.11 valid=10s ipv6=off;
+
     # Gzip compression
     gzip on;
     gzip_vary on;
